# shallocator

./: COPYING  Makefile.am  README  configure.in  libshallocator.pc.in
debian/: changelog  control  copyright  files  libshallocator-dev.dirs  libshallocator-dev.install  rules
include/: Makefile.am
include/shallocator/: Makefile.am  shalloc.h  shbitset.h  shdeque.h  shlist.h  shmap.h  shmemory.h  shmultimap.h  shmultiset.h  shset.h  shstack.h  shstring.h  shvector.h
src/: Makefile.am  example.cc  shallocator.cc
