#
# FILE             $Id$
#
# DESCRIPTION      Project makefile template.
#
# PROJECT          Shared memory STL allocator.
#
# AUTHOR           Michal Bukovsky <michal.bukovsky@firma.seznam.cz>
#
# LICENSE          see COPYING
#
# Copyright (C) Seznam.cz a.s. 2007
# All Rights Reserved
#
# HISTORY
#       2007-04-25 (bukovsky)
#                  First draft.
#

includedir = @includedir@/shallocator
include_HEADERS = shalloc.h shmap.h shset.h shstring.h shvector.h \
		  shlist.h shmultiset.h shmultimap.h shstack.h shdeque.h \
		  shbitset.h shmemory.h

